<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_cam_launch_pyscript" Id="{3e29b487-fc53-46ec-88ed-6c2d08f70370}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_cam_launch_pyscript
VAR_INPUT
	bstart 	: BOOL;
	bstop	: BOOL;
END_VAR
VAR_OUTPUT
	bActive	: BOOL;
END_VAR
VAR
	python				:NT_StartProcess;
	get_AMSNETID		:FB_GetLocalAmsNetId;
	path 				:STRING := '/C Python Dev\OAK_D\';
	python_script 		:STRING := 'CAM_PORT.py';
	AMSNETID 			:STRING;
	launchCommandLine 	:STRING(255);
	busy				:BOOL;
	
	bRestartActive		:BOOL;
	bStopActive			:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[get_AMSNETID(bExecute:=G_CAM.restart_py_script,AddrString=>AMSNETID, bBusy=>busy);

launchCommandLine := CONCAT(path, python_script);
launchCommandLine := CONCAT(launchCommandLine, ' -a ');
launchCommandLine := CONCAT(launchCommandLine, AMSNETID);
if not busy then
	python(
	NETID:= '',
	PATHSTR:= 'C:\Windows\System32\cmd.exe',
	DIRNAME:= '',
	COMNDLINE:= launchCommandLine,
	START:= G_CAM.restart_py_script,
	TMOUT := T#5s,
	BUSY=>,
	ERR=> ,
	ERRID=>);
END_IF

IF bStart AND NOT bRestartActive THEN
	bRestartActive := TRUE;
	G_CAM.restart_py_script:=FALSE;
END_IF
IF bRestartActive AND NOT G_CAM.restart_py_script THEN
	G_CAM.restart_py_script :=TRUE;
END_IF
IF G_CAM.restart_py_script AND NOT bStart THEN 
	bRestartActive := FALSE;
END_IF

IF bStop THEN
	G_CAM.STOP_PYSCRIPT:=TRUE;
END_IF

bActive := G_CAM.bPyscript_running;]]></ST>
    </Implementation>
    <LineIds Name="P_cam_launch_pyscript">
      <LineId Id="84" Count="3" />
      <LineId Id="62" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="93" Count="8" />
      <LineId Id="91" Count="1" />
      <LineId Id="140" Count="1" />
      <LineId Id="144" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="112" Count="2" />
      <LineId Id="116" Count="0" />
      <LineId Id="149" Count="2" />
      <LineId Id="147" Count="0" />
      <LineId Id="131" Count="1" />
      <LineId Id="129" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="128" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>